<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="Dialog Title"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <!--android:textColor="#8A646464"-->

    <EditText
        android:id="@+id/dialog_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_name"
        android:inputType="textCapSentences|text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/dialog_price_edit_text"
        android:textColorHint="#89C3C3C3"
        android:textSize="20sp"
        android:autofillHints=""/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="10dp"
        android:background="@color/divider"
        android:contentDescription="@string/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/currency_text_view"
            app:layout_constraintRight_toLeftOf="@id/currency_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0">

            <EditText
                android:id="@+id/dialog_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/hint_amount"
                android:inputType="textMultiLine|number"
                android:textColorHint="#89C3C3C3"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/dialog_details_edit_text"
                android:textSize="20sp"
                android:autofillHints=""
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="22sp"
            android:text="@string/euro"
            android:textColor="#89C3C3C3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="10dp"
        android:background="@color/divider"
        android:contentDescription="@string/divider"/>

    <EditText
        android:id="@+id/dialog_details_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:maxLines="2"
        android:imeOptions="actionDone"
        android:hint="@string/hint_details"
        android:inputType="textCapSentences|text"
        android:textColorHint="#89C3C3C3"
        android:textSize="20sp"
        android:autofillHints=""/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="10dp"
        android:background="@color/divider"
        android:contentDescription="@string/divider" />
</LinearLayout>